<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.owner.androidtest.MainActivity">


    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/featScreen"
            android:src="@drawable/splash1"

            android:id="@+id/imageView3"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/feat1"
            android:textColor="@color/black"
            android:typeface="monospace"
            android:id="@+id/textView3"
            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1" app:layout_constraintBottom_toBottomOf="@+id/textView2"
            android:layout_marginEnd="3dp" app:layout_constraintRight_toRightOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView2" android:layout_marginRight="3dp"/>
    <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/feat1_2"
            android:textColor="@color/black"
            android:typeface="serif"
            tools:layout_editor_absoluteX="42dp" tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1" app:layout_constraintRight_toRightOf="@+id/feature1"
            android:id="@+id/textView5" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/feature1"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/feat2"
            android:textColor="@color/white"
            android:typeface="monospace"

            android:id="@+id/textView2"

            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            android:layout_marginEnd="45dp" app:layout_constraintRight_toRightOf="@+id/feature2"
            android:layout_marginTop="90dp" app:layout_constraintTop_toTopOf="@+id/feature2"
            android:layout_marginRight="45dp"/>
    <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/feat2_2"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:typeface="serif"

            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            android:layout_marginStart="216dp" android:layout_marginEnd="217dp"
            app:layout_constraintRight_toRightOf="@+id/feature3" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/textView5" android:layout_marginLeft="216dp"
            android:layout_marginRight="217dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/feat3"
            android:textColor="@color/red"
            android:typeface="monospace"

            android:id="@+id/textView4"

            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1" app:layout_constraintBottom_toBottomOf="@+id/textView2"
            android:layout_marginEnd="6dp" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" android:layout_marginRight="6dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/inProgress"
            android:text="@string/feat3_2"
            android:textColor="@color/red"
            android:typeface="serif"

            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            android:layout_marginStart="17dp" android:layout_marginEnd="17dp"
            app:layout_constraintRight_toRightOf="@+id/feature3" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/textView4" android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"/>

    <Button
            android:layout_width="199dp"
            android:layout_height="370dp"
            android:background="@android:color/transparent"
            android:id="@+id/feature1"
            app:layout_constraintBaseline_toBaselineOf="@+id/feature2"
            tools:layout_constraintBaseline_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/imageView3"/>
    <Button
            android:layout_width="226dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:id="@+id/feature2"
            app:layout_constraintLeft_toRightOf="@+id/feature1"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            android:layout_marginBottom="0dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:layout_width="170dp"
            android:layout_height="370dp"
            android:background="@android:color/transparent"
            android:id="@+id/feature3"
            app:layout_constraintLeft_toRightOf="@+id/feature2"
            app:layout_constraintBaseline_toBaselineOf="@+id/feature2"
            tools:layout_constraintBaseline_creator="1"/>



</android.support.constraint.ConstraintLayout>
