<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_servant_stats"
        tools:context="com.example.owner.androidtest.ServantStats"
        tools:layout_editor_absoluteY="81dp"
        tools:layout_editor_absoluteX="0dp">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/idHelp"
            android:id="@+id/editText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_bias="0.034"
            tools:layout_constraintRight_creator="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
    <Button
            android:id="@+id/servantButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/editText"
            android:layout_below="@+id/editText"
            android:text="@string/submit"
            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/textView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="176dp"
            android:layout_marginTop="114dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="176dp"
            android:layout_gravity="top"/>

    <ImageView
            android:layout_width="144dp"
            android:layout_height="203dp"
            android:contentDescription="@string/portrait"
            app:layout_constraintTop_toTopOf="@+id/editText"
            app:layout_constraintRight_toRightOf="@+id/editText"
            app:layout_constraintLeft_toLeftOf="@+id/editText"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/imageView"
            android:layout_marginTop="96dp"
            app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintLeft_toLeftOf="@id/textView"
            app:layout_constraintRight_toRightOf="@id/imageView"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginRight="22dp"

            android:layout_marginEnd="22dp"
            android:layout_marginTop="10dp"
            android:id="@+id/traits"/>


</android.support.constraint.ConstraintLayout>
